--- a/src/index.html
+++ b/src/index.html
@@ -90,9 +90,13 @@
             </div>
         </section>
         <section class="carousel__list">
-            <img src="" alt="">
-            <img src="" alt="">
-            <img src="" alt="">
+            <div class="container">
+                <div class="d-flex justify-content-center align-content-center">
+                    <img src="img/background/slide1.jpg" alt="" class="first-slade">
+                    <img src="img/background/slide2.jpg" alt="" class="second-slide">
+                    <img src="img/background/slide3.jpg" alt="" class="third-slide">
+                </div>
+            </div>
         </section>
     </main>
     <footer></footer>
