create two new block

--- a/src/index.html
+++ b/src/index.html
@@ -98,6 +98,24 @@
                 </div>
             </div>
         </section>
+        <section class="catalog">
+            <div class="container">
+                <p>Каталог пульсометров</p>
+                <ul class="catalog__list">
+                    <li class=""><a id="link">Для фитнеса</a></li>
+                    <li class=""><a href="#" id="link">для бега</a></li>
+                    <li class=""><a href="#" id="link">для триатлона</a></li>
+                </ul>
+                <div class="catalog__shop d-flex justify-content-between">
+                    <div class="catalog__shop-info"></div>
+                    <div class="catalog__shop-info"></div>
+                    <div class="catalog__shop-info"></div>
+                    <div class="catalog__shop-info"></div>
+                    <div class="catalog__shop-info"></div>
+                    <div class="catalog__shop-info"></div>
+                </div>
+            </div>
+        </section>
     </main>
     <footer></footer>
     <script src="/js/script.js"></script>
