--- a/src/index.html
+++ b/src/index.html
@@ -100,20 +100,20 @@
             <div class="container">
                 <h2>НАШИ ПРЕИМУЩЕСТВА</h2>
                 <div class="d-flex justify-content-center flex-column flex-lg-row">
-                    <div class="advantages__cont">
+                    <div class="advantages__cont cup">
                         <img src="img/icon/cup.png" alt="">
                         <h3>Делимся опытом</h3>
                         <div class="advantages__cont-text">Наши сотрудники всегда готовы поделиться своим опытом,<br>
                             так как сами бегают полумарафоны, переплыли Босфор, готовятся к соревнованиям по триатлону!
                         </div>
                     </div>
-                    <div class="advantages__cont">
-                        <img src="img/icon/heart.png" alt="">
+                    <div class="advantages__cont heart">
+                        <img src="img/icon/heart.png" alt="" class="advantages__cont__animated">
                         <h3>Заботимся о здоровье</h3>
                         <div class="advantages__cont-text">Мы работаем для того, <br> чтобы Ваши занятия спортом шли на
                             пользу Вашему здоровью и были в радость Вам и Вашим близким!</div>
                     </div>
-                    <div class="advantages__cont">
+                    <div class="advantages__cont shoe">
                         <img src="img/icon/shoe.png" alt="">
                         <h3>Учим бегать</h3>
                         <div class="advantages__cont-text">Помогаем с обучением <br> правильной технике бега! <br>
@@ -526,9 +526,9 @@
 
     <a href="#header" class="scroll"><img src="img/icon/scrollUp.png" alt=""></a>
 
-    <script type="text/javascript" src="https://code.jquery.com/jquery-1.11.0.min.js"></script>
-    <script type="text/javascript" src="https://code.jquery.com/jquery-migrate-1.2.1.min.js"></script>
-    <script type="text/javascript" src="js/slick.min.js"></script>
+    <script src="https://code.jquery.com/jquery-1.11.0.min.js"></script>
+    <script src="https://code.jquery.com/jquery-migrate-1.2.1.min.js"></script>
+    <script src="js/slick.min.js"></script>
     <script src="https://maps.app.goo.gl/j1mVD3VQtPiGyUN38"></script>
     <script src="js/script.js"></script>
 </body>
